--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
+      "@/component/*": ["./src/app/component/*"],
       "@/styles/*": ["./src/styles/*"],
     }
   },
